--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 <h1 id="heading1">Connecting the Dots of Logistics!</h1>
 <h3 id="heading3">Seamlessly Delivering Your Goods, Every Mile, Every Time.</h3>
 
-<button id="calculate">Calculate the fair</button>
+<button id="calculate">Calculate your fair</button>
 <h2 id="offer">What we are offering?</h2>
 
 <p id="welcome_message" class="fading">
